# GGJ-2020-cool-game

./: .gitignore  README.md  cool_game_regym_hyperopt.py  cool_game_regym_optuna.py  play_human_vs_human.py  pyproject.toml  regym_integration_test.py  requirements.txt  running_balancing_experiment.md  setup.py
gym_cool_game/: __init__.py  random_walk_test.py
gym_cool_game/MCTS/: mcts.py  multiplayer_olnode.py  simul_mcts.py
gym_cool_game/envs/: RandomWalk.py  __init__.py  board.py  board_test.py  bots.py  cool_game_env.py  game.py  game_params.py  main.py  pygame_bots.py  pygame_render.py  render_test.py  schiff.py  valid_inputs.py
hyperopt_mongo/: clear_and_run_parallel_experiment.sh  clear_mongo_generated_files.sh  cool_game_regym_hyperopt.py  cool_game_regym_wb.py  parallel_autobalancing.py  save_trial.py  winrate_balancing_sweep.yaml
