[tool.poetry]
name = "ggj-2020-cool-game"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^2.7"
gym = "^0.15.4"
numpy = "^1.18.1"
pygame = "^1.9.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
