[tool.poetry]
name = "ggj-2020-cool-game"
version = "0.1.0"
description = ""
authors = ["Charles Gbadamosi <acw524@qmul.ac.uk>"]

[tool.poetry.dependencies]
python = "3.8"
gym = "^0.15.4"
numpy = "^1.18.1"
pygame = "^1.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
